<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0000ffff"
        android:backgroundTint="@color/black"
        android:fontFamily="cursive"
        android:text="REGISTRATION FORM"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MainActivity_FullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:textColorHint="@color/black"
        android:layout_marginEnd="20dp"
        android:background="#0000ffff"
        android:hint="Full Name"
        app:helperTextTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Layout_FullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000ffff"
            android:fontFamily="serif"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="204dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MainActivity_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#0000ffff"
        app:boxCornerRadiusTopStart="20dp"
        android:hint="Email"
        app:counterMaxLength="500"
        app:helperTextTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MainActivity_FullName"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Layout_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000ffff"
            android:fontFamily="serif"
            android:textSize="22sp"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MainActivity_PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/black"
        android:background="#0000ffff"
        app:counterEnabled="true"
        app:counterMaxLength="14"
        app:helperTextTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MainActivity_Email"
        app:startIconDrawable="@drawable/ic_baseline_phone_callback_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Layout_Phone_Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:fontFamily="serif"
            android:inputType="phone"
            android:lines="1"
            android:background="#0000ffff"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/spinnetr1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:scrollbarSize="30sp"
        android:textSize="50sp"
        android:entries="@array/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivity_PhoneNumber">

    </Spinner>

    <Button
        android:id="@+id/MainActivity_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:fontFamily="cursive"
        android:text="sign up"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnetr1" />


</androidx.constraintlayout.widget.ConstraintLayout>


